# ia

./: .clang_complete  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  COMPILING_osx.md  GPATH  GRTAGS  GSYMS  GTAGS  Makefile  Makefile_osx  README.md  Toolchain-cross-mingw32.txt  build-debug.sh  clang-build.sh  clang-static-analysis.sh  ia.sh  pack-release.sh  run-debug.sh  run-with-valgrind.sh  valgrind.sh
API/SDL2/lib/: libSDL2_mixer.la
API/SDL_osx/: SDLMain.m
API/SFML/include/SFML/: Audio.hpp  Config.hpp  Graphics.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
API/SFML/include/SFML/Audio/: Listener.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
API/SFML/include/SFML/Graphics/: Color.hpp  Drawable.hpp  Font.hpp  Glyph.hpp  Image.hpp  Rect.hpp  Rect.inl  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  View.hpp
API/SFML/include/SFML/Network/: Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
API/SFML/include/SFML/System/: Clock.hpp  Err.hpp  Lock.hpp  Mutex.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  Thread.hpp  ThreadLocal.hpp  ThreadLocalPtr.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector3.hpp
API/SFML/include/SFML/Window/: Context.hpp  ContextSettings.hpp  (+5 more)
API/SFML/lib_linux/: libsfml-audio.so.2  libsfml-audio.so.2.0  libsfml-graphics.so.2  libsfml-graphics.so.2.0  libsfml-system.so.2  libsfml-system.so.2.0  libsfml-window.so.2  libsfml-window.so.2.0
API/SFML/lib_linux_shared/: libsfml-graphics.so.2  libsfml-window.so.2
IA_v12.2_win/: config.txt
IA_v12.2_win/save/: delete_me
IA_v13.0_linux/: config.txt  ia
SDL/SDL2_image-2.0.1/i686-w64-mingw32/lib/: libSDL2_image.la
SDL/SDL2_image-2.0.1/x86_64-w64-mingw32/lib/: libSDL2_image.la
SDL2/lib/pkgconfig/: SDL2_mixer.pc
assets/: config.txt  contact.txt  credits.txt  manual  manual.txt  release_history.txt
assets/data/: ascii_graveyard
assets/data/map/: levels.txt  rooms.txt
cb_linux_project/: cb_linux_project.cbp
cb_win_project/: CppCheckResults.xml  cb_win.workspace  cb_win.workspace.layout  cb_win_project.cbp  cb_win_project.cbp.cbTemp  cb_win_project.depend  cb_win_project.layout  cb_win_project.layout.cbTemp  cb_win_project.layout.orig  gmon.out
eclipse_linux_project/: .cproject  .project
icon/: icon.rc  resource.rc
include/: AI_castRandomSpell.h  AI_handleClosedBlockingDoor.h  AI_handleInventory.h  AI_look_becomePlayerAware.h  AI_makeRoomForFriend.h  AI_moveToRandomAdjacentCell.h  AI_moveTowardsInterest.h  AI_moveTowardsTargetSimple.h  AI_setPathToLairIfNoLosToLair.h  AI_setPathToLeaderIfNoLosToLeader.h  AI_setPathToPlayerIfAware.h  AI_setSpecialBlockedCells.h  AI_stepPath.h  AI_stepToLairIfHasLosToLair.h  AbilityValues.h  Actor.h  ActorData.h  ActorFactory.h  ActorMon.h  ActorMonster.h  ActorPlayer.h  Ai.h  Art.h  Attack.h  Audio.h  AudioIds.h  AutoDescribeActor.h  Bash.h  BasicUtils.h  Blood.h  Bot.h  BresenhamLine.h  CellPred.h  CharacterDescr.h  CharacterLines.h  Close.h  CmnData.h  CmnTypes.h  Colors.h  CommonData.h  (+273 more)
include/debugModeIncl/: DebugMode.h
include/debug_mode_incl/: debug_mode.h
include/release_mode_incl/: debug_mode.h
mockup/: mockup.xcf
osx/: Info.plist  Makefile_osx  ia.icns
res/: ascii_graveyard  credits.txt  license.txt  manual.txt  release_history.txt
res/data/: colors.xml  colors_gui.xml  monsters.xml
res/data/map/: levels.txt  rooms.txt
res/fonts/: TYPEWR_B.TXT  TYPEWR__.TXT
res/gfx/tiles/: ia_tiles_24x24.tar
rl_utils/include/: array2.hpp  bresenham.hpp  direction.hpp  flood.hpp  mersenne_twister.hpp  misc.hpp  pathfind.hpp  pos.hpp  random.hpp  rect.hpp  rl_utils.hpp  time.hpp
rl_utils/src/: bresenham.cpp  direction.cpp  flood.cpp  misc.cpp  pathfind.cpp  pos.cpp  random.cpp  rl_utils.cpp  time.cpp
sdl/lib/linux/: libSDL.la  libSDLmain.la
sdl/lib/linux/pkgconfig/: sdl.pc
src/: #Engine.cpp#  .#item.cpp  AI_castRandomSpell.h  AI_handleClosedBlockingDoor.h  AI_handleInventory.h  AI_listen_becomePlayerAware.h  AI_listen_respondWithAggroPhrase.h  AI_look_becomePlayerAware.h  AI_look_moveTowardsTargetIfVision.h  AI_makeRoomForFriend.h  AI_moveToRandomAdjacentCell.h  AI_moveTowardsInterest.h  AI_moveTowardsTargetSimple.h  AI_setPathToLairIfNoLosToLair.h  AI_setPathToLeaderIfNoLosToLeader.h  AI_setPathToPlayerIfAware.h  AI_stepPath.h  AI_stepToLairIfHasLosToLair.h  AbilityValues.cpp  AbilityValues.h  Actor.cpp  Actor.h  ActorCultist.cpp  ActorData.cpp  ActorData.h  ActorFactory.cpp  ActorFactory.h  ActorFireHound.cpp  ActorFireVampire.cpp  ActorGhost.cpp  ActorGhoul.cpp  ActorGiantBat.cpp  ActorKeziahMason.cpp  ActorMiGo.cpp  ActorMon.cpp  ActorMonster.cpp  ActorMonster.h  ActorMonsterSpecific.cpp  ActorOoze.cpp  ActorPlayer.cpp  (+427 more)
src/debugModeIncl/: DebugMode.h
src/releaseModeIncl/: DebugMode.h
test/UnitTest++/UnitTest++_cb_win_project/: UnitTest++_cb_win_project.cbp
test/UnitTest++/src/: AssertException.cpp  AssertException.h  CheckMacros.h  Checks.cpp  Checks.h  Config.h  CurrentTest.cpp  CurrentTest.h  DeferredTestReporter.cpp  DeferredTestReporter.h  DeferredTestResult.cpp  DeferredTestResult.h  ExecuteTest.h  MemoryOutStream.cpp  MemoryOutStream.h  ReportAssert.cpp  Test.cpp  Test.h  TestDetails.cpp  TestDetails.h  TestList.cpp  TestList.h  TestMacros.h  TestReporter.cpp  TestReporter.h  TestReporterStdout.cpp  TestReporterStdout.h  TestResults.cpp  TestResults.h  TestRunner.cpp  TestRunner.h  TestSuite.h  TimeConstraint.cpp  TimeConstraint.h  XmlTestReporter.cpp  XmlTestReporter.h
test/UnitTest++/src/Win32/: TimeHelpers.cpp  TimeHelpers.h
test/cb_win_ut_project/: cb_win_ut_project.cbp  cb_win_ut_project.depend  cb_win_ut_project.layout
test/include/stubs/: Audio.h  Input.h  Renderer.h  SdlWrapper.h
test/src/: main.cpp  test_main.cpp
tools/: count lines.bat  drmemory.bat  drmemory_suppress.txt  valgrind.supp
xml/tinyxml2/: IA-README.txt  tinyxml2.cpp
